# synergy

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  config.yaml  cspell.json  sonar-project.properties
.github/: matrix.yml
.github/actions/dist-copy-bin/: action.yml
.github/actions/dist-upload/: action.yml
.github/actions/get-version/: action.yml
.github/actions/install-deps/: action.yml
.github/actions/release-windows/: action.yml
.github/actions/sign-windows/: action.yml
.github/scripts/: pr-merge-comment.js
.github/workflows/: ci-comment.yml  ci-linux.json  ci-targets.json  ci-test-pr-query.yml  ci.yml  codeql-analysis.yml  sonarcloud-analysis.yml
cmake/: Build.cmake  Definitions.cmake  Libraries.cmake  Packaging.cmake  Version.cmake
ext/toolchain/: commands1.py
res/: config.h.in  version.h.in
scripts/: install_deps.py  install_deps.sh  package.py
scripts/lib/: windows.py
src/: CMakeLists.txt
src/apps/deskflow-client/: CMakeLists.txt
src/apps/deskflow-core/: CMakeLists.txt  deskflow-core.cpp
src/apps/deskflow-daemon/: CMakeLists.txt  deskflow-daemon.cpp
src/apps/deskflow-server/: CMakeLists.txt
src/cmd/synergyd/: CMakeLists.txt
src/gui/: CMakeLists.txt  gui.pro
src/gui/res/: AboutDialogBase.h  ActionDialogBase.h  ActivationDialog.h  AddClientDialogBase.h  CancelActivationDialog.h  CancelActivationDialog.ui  FailedLoginDialog.h  HotkeyDialogBase.h  MainWindowBase.h  ScreenSettingsDialogBase.h  ServerConfigDialogBase.h  SettingsDialogBase.h  SetupWizardBase.h
src/gui/src/: AboutDialog.cpp  KeySequence.cpp  KeySequence.h  LicenseManager.cpp  MainWindow.cpp  MainWindow.h  MainWindowBase.ui  ServerConfig.cpp  ServerConfigDialog.cpp  main.cpp
src/lib/client/: Client.cpp  Client.h
src/lib/common/: constants.h
src/lib/deskflow/: App.cpp  App.h  CMakeLists.txt  ClientApp.cpp  IClipboard.cpp  IKeyState.h  IPlatformScreen.h  KeyState.cpp  PlatformScreen.cpp  PlatformScreen.h
src/lib/gui/: Logger.cpp  Logger.h  VersionChecker.cpp  VersionChecker.h  constants.h  diagnostic.cpp  diagnostic.h  dotenv.cpp  messages.cpp  messages.h  paths.cpp  paths.h
src/lib/net/: SecureSocket.cpp  TCPListenSocket.cpp
src/lib/platform/: CMakeLists.txt  EiKeyState.cpp  EiKeyState.h  EiScreen.cpp  EiScreen.h  MSWindowsDesks.cpp  MSWindowsHook.cpp  MSWindowsKeyState.cpp  MSWindowsProcess.cpp  MSWindowsScreen.cpp  MSWindowsScreen.h  MSWindowsWatchdog.cpp  OSXEventQueueBuffer.cpp  OSXEventQueueBuffer.h  OSXScreen.h  OSXScreen.mm  OSXScreenSaver.cpp  PortalInputCapture.cpp  PortalInputCapture.h  PortalRemoteDesktop.cpp
src/lib/server/: InputFilter.cpp  Server.cpp
src/lib/shared/: EditionType.h  SerialKey.cpp  SerialKey.h
src/lib/synergy/: App.h  CMakeLists.txt  (+3 more)
(+48 files in other folders)
